--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/assets/main-bg.webp"
+      type="image/webp"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CarShare TJ</title>
     <!-- (Необязательно, но если есть favicon, можешь добавить)
